--- a/SqlHelper/Sample/todo.txt
+++ b/SqlHelper/Sample/todo.txt
@@ -1,4 +1,29 @@
-﻿为 表达式　的 DateTime 等类型追加　单比较　年月日　等部分　的方法
+﻿
+
+现有生成物含有：
+
+SqlLib 类库一只
+  含 DbSet 结构以及下面用到的基类和方法
+
+数据结构类映射
+  含 SELECT 方法
+
+  todo: UPDATE 方法
+  todo: DELETE 方法
+
+  含 存储过程方法（返回DbSet）
+
+表达式创建器
+
+
+
+
+
+
+
+
+
+为 表达式　的 DateTime 等类型追加　单比较　年月日　等部分　的方法
 
 设计 数据结构描述类 (初期先实现可以指代 Column 的类)
 
