--- a/SqlHelper/Sample/todo.txt
+++ b/SqlHelper/Sample/todo.txt
@@ -1,30 +1,22 @@
-﻿
-
-现有生成物含有：
-
-SqlLib 类库一只
-  含 DbSet 结构以及下面用到的基类和方法
+﻿现有生成物含有：
 
 数据结构类映射
   含 SELECT 方法
-  todo: SELECT (限定字段列表)
-  todo: UPDATE 方法
-  todo: DELETE 方法
+  SELECT (限定字段列表)
+  UPDATE 方法
+  DELETE 方法
 
-  含 存储过程方法（返回DbSet）
+ 含 存储过程方法（返回DbSet）
 
+
+
+
+
+todo:
 表达式创建器
 
-
-
-
-
-
-
-
-
+todo:
 为 表达式　的 DateTime 等类型追加　单比较　年月日　等部分　的方法
 
-设计 数据结构描述类 (初期先实现可以指代 Column 的类)
-
+todo:
 为 数据结构->类 的属性 增加 #DEBUG 检查属性在读取的时候是否已填充的功能
