--- a/SqlHelper/Sample/todo.txt
+++ b/SqlHelper/Sample/todo.txt
@@ -15,7 +15,13 @@
 
 todo:
 
-为表现外键关系。添加　子表的 Select(父对象, Query) 方法
+为表现外键关系。添加　子表的 Select(父对象, Query) 方法 (done)
+
+添加这样的长像的扩展方法
+
+public static List<Tree> Select<Tree>(this Tree o) {
+    return Tree.Select(o);
+}
 
 
 
